# mle-training

./: Dockerfile  README.md  env.yml  flake8standard  nonstandardcode.py  pyproject.toml  setup.cfg  setup.py
artifacts/: d_tree.pkl  lin_reg.pkl
deploy/conda/: linux_cpu_py310.yml
notebooks/: housing.ipynb
src/: ingest_data.py  score.py  train.py
src/housing_package/: ingest_data.py  log_config.py  score.py  train.py
src/housing_package.egg-info/: PKG-INFO  SOURCES.txt
tests/functional_tests/: test_installation.py  test_training.py
tests/unit_tests/: test_data_ingestion.py
