[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "housing_package"
version = "0.0.1"
authors = [
  { name="Deepak Sharma", email="deepak.sharma@tigeranalytics.com" },
]
description = "Mle training: Housing prediction"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]